k8s/service1.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp
  labels:
    run: myapp
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
  selector:
    run: myapp
